{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 58,
  "lineage": "f162a1f3-9e05-1b81-a786-d157314c4699",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_public_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c80ee01088249cc0",
            "arn": "arn:aws:ec2:ap-south-1:209479265154:elastic-ip/eipalloc-0c80ee01088249cc0",
            "domain": "vpc",
            "id": "eipalloc-0c80ee01088249cc0",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-61-151.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.61.151",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:internet-gateway/igw-0d8d7821619e02bd8",
            "id": "igw-0d8d7821619e02bd8",
            "owner_id": "209479265154",
            "vpc_id": "vpc-01c8d36637720b4f8"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_net_gtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c80ee01088249cc0",
            "connectivity_type": "public",
            "id": "nat-0788db66dfa8b7e9a",
            "subnet_id": "subnet-0a04e32696a819c50"
          },
          "dependencies": [
            "aws_eip.my_public_eip",
            "aws_internet_gateway.my_internet_gtw",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:route-table/rtb-01aa0269562831bcc",
            "id": "rtb-01aa0269562831bcc",
            "owner_id": "209479265154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8d7821619e02bd8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c8d36637720b4f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_asc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-01",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9c980e7696802d0",
            "route_table_id": "rtb-01aa0269562831bcc",
            "subnet_id": "subnet-0a04e32696a819c50"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_route_table.my_public_route",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        },
        {
          "index_key": "public-02",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da3bd09f7f10aa0e",
            "route_table_id": "rtb-01aa0269562831bcc",
            "subnet_id": "subnet-0d5b8b08fd522fd5a"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gtw",
            "aws_route_table.my_public_route",
            "aws_subnet.my_public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:security-group/sg-0e46c8266d63ded43",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e46c8266d63ded43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250331194646186600000001",
            "name_prefix": "terraform-",
            "owner_id": "209479265154",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c8d36637720b4f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:security-group/sg-0d940ab45c251387f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d940ab45c251387f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250331194646186800000002",
            "name_prefix": "terraform-",
            "owner_id": "209479265154",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c8d36637720b4f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:subnet/subnet-0346a8f32279ea5f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0346a8f32279ea5f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209479265154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01c8d36637720b4f8"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-01",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:subnet/subnet-0a04e32696a819c50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a04e32696a819c50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209479265154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imazy-public-01",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "imazy-public-01",
              "terraform": "true"
            },
            "vpc_id": "vpc-01c8d36637720b4f8"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        },
        {
          "index_key": "public-02",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:subnet/subnet-0d5b8b08fd522fd5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5b8b08fd522fd5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "209479265154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imazy-public-02",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "imazy-public-02",
              "terraform": "true"
            },
            "vpc_id": "vpc-01c8d36637720b4f8"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.my_available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:209479265154:vpc/vpc-01c8d36637720b4f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0448c71631c2a16bd",
            "default_route_table_id": "rtb-02de5e23638184c92",
            "default_security_group_id": "sg-012f934011c284f49",
            "dhcp_options_id": "dopt-034dbb925f3864a42",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c8d36637720b4f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02de5e23638184c92",
            "owner_id": "209479265154"
          }
        }
      ]
    }
  ]
}